# ops_toolkits_gui

./: .gitignore  pyproject.toml  run.py
scripts/: run_dev.sh
src/ops_toolkit_gui/: __main__.py  app.py
src/ops_toolkit_gui/collectors/: filesystem_collector.py  log_analyzer_collector.py  performance_collector.py  user_activity_collector.py
src/ops_toolkit_gui/gui/: __init__.py  main_window.py  workers.py
src/ops_toolkit_gui/gui/pages/: __init__.py  activity_page.py  filesystem_page.py  log_page.py  overview_page.py  performance_page.py  performance_page.py:Zone.Identifier
src/ops_toolkit_gui/models/: common.py  filesystem.py  logs.py  performance.py  user_activity.py
src/ops_toolkit_gui/services/: config_service.py  log_rotate_service.py  report_service.py
