[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-toolkit-gui"
version = "0.1.0"
description = "Linux Ops Toolkit (GUI)"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "psutil>=5.9",
]

[project.scripts]
ops-toolkit-gui = "ops_toolkit_gui.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
